@@ -40,7 +40,7 @@
      * @return string A fully formated HTML <code>&lt;a&gt;</code> tag.
      */
     function zm_product_image_link($product, $format=PRODUCT_IMAGE_SMALL, $echo=ZM_ECHO_DEFAULT) {
-        $html = '<a href="'.zm_product_href($product->getId(), false).'" class="product">';
+        $html = '<a href="'.zm_product_href($product->getId(), null, false).'" class="product">';
         $html .= zm_image($product->getImageInfo(), $format, '', false);
         $html .= '</a>';
 
