@@ -4,6 +4,8 @@ Release 0.9.1
 - always enable HTML echo'ing in admin
 - make fields for zm_quick_edit plugin configurable; this also includes
   support for custom fields via generic get/set methods
+- add categoryId parameter to zm_product_href; this requires changes to a few
+  templates that use the echo parameter
 
 Release 0.9.0
 - move cache manager page from core to zm_page_cache plugin
